# PortfolioProjects

./: README.md
3D Projects including RAW Files/Cartoon-ish Car 3D/: Car1.blend  readme.md
3D Projects including RAW Files/Coffee Mug 3D/: Mug.blend  readme.md
3D Projects including RAW Files/Donuts 3D/: Donut.blend  readme.md
3D Projects including RAW Files/Lonely House 3D/: Lonely House.blend  readme.md
BarrelJump JavaScript Game/: CheckPoint.js  DamageObject.js  ListenersAndTime.js  Obstacle.js  Player.js  SpecialObstacle.js  audio.js  elements.js  eventListeners.js  game.js  gameState.js  index.html  readMe.md  story.js  storyElements.js  storyListeners.js  style.css  time.JS
BarrelJump JavaScript Game/IMGs/: people.avif
JavaScript Projects/BarrelJump JavaScript Game/: CheckPoint.js  DamageObject.js  ListenersAndTime.js  Obstacle.js  Player.js  SpecialObstacle.js  audio.js  elements.js  game.js  time.JS  (+7 more)
JumpandRun/: ReadME.md  settings.gradle.kts
JumpandRun Kotlin Game Project/: txt.txt
MonitoringApp/: cpu_monitor.py  disk_monitor.py  gpu_monitor.py  graph.py  main.py  monitor.py  ram_monitor.py  readMe.md  requirements.txt  ui.py  utils.py
News Platform - React.js Project with Node.js Backend/: readMe.md
NodsJs Session Prototype/: readMe.md  server.js
Rust Projects/LinuxDock-master/: Cargo.toml  README.md  install.sh  uninstall.sh
Rust Projects/LinuxDock-master/src/: main.rs
ToDo Desktop Application - Python TKINTER/: main.py  readMe.md  todo.db
flappy/: BaseGameObject.js  Character.js  GameUtils.js  Pipe.js  game.js  index.html  readMe.md
(+193 files in other folders)
