[package]
name = "LinuxDock"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.10.3"
gtk4-layer-shell = "0.7.1"
glib = "0.21"
async-channel = "2.3"
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
